<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthProfile"
    android:background="@color/app_bg_color">
    <!-- Profile-->
    <LinearLayout
        android:id="@+id/profileinfo"
        android:layout_width="361dp"
        android:layout_height="77dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_profile_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"

            android:layout_marginVertical="13dp"
            android:src="@drawable/avatar"
            android:contentDescription="@string/avatar" />
        <LinearLayout
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="17dp"
            android:layout_marginHorizontal="13dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_person"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_color"
                android:textSize="16sp"

                android:layout_marginBottom="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_mail"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/grey"

                android:layout_marginBottom="4dp"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/keyboard_arrow_right"
            android:contentDescription="@string/arrow" />
    </LinearLayout>
    <!-- Geo,Notification,Cards,Safety-->
    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="230dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/bg_profile_info"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="45dp"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/location_on"
                android:scaleType="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/geolocation" />
            <TextView
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/geolocation"
                android:textSize="16sp"
                android:textColor="@color/grey"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/keyboard_arrow_right_small"
                android:contentDescription="@string/arrow" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/notifications"
                android:scaleType="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/notification" />
            <TextView
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/notification"
                android:textSize="16sp"
                android:textColor="@color/grey"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/keyboard_arrow_right_small"
                android:contentDescription="@string/arrow" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/credit_card_gear"
                android:scaleType="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/credit_card" />
            <TextView
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cards"
                android:textSize="16sp"
                android:textColor="@color/grey"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/keyboard_arrow_right_small"
                android:contentDescription="@string/arrow" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/shield"
                android:scaleType="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/safety" />
            <TextView
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/safety"
                android:textSize="16sp"
                android:textColor="@color/grey"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/keyboard_arrow_right_small"
                android:contentDescription="@string/arrow" />
        </LinearLayout>

    </LinearLayout>
    <!-- Ref,Achievements-->
    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="120dp"
        android:layout_marginTop="388dp"
        android:background="@drawable/bg_profile_info"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="45dp"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:scaleType="center"
                android:src="@drawable/stars"
                android:contentDescription="@string/achieves" />

            <TextView
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/achievements"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/keyboard_arrow_right_small"
                android:contentDescription = "@string/arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:scaleType="center"
                android:src="@drawable/diversity"
                android:contentDescription="@string/ref" />

            <TextView
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ref_system"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/keyboard_arrow_right_small"
                android:contentDescription="@string/arrow" />
        </LinearLayout>
    </LinearLayout>
    <!-- Exit -->
    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="65dp"
        android:layout_marginTop="528dp"
        android:background="@drawable/bg_profile_info"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:scaleType="center"
                android:src="@drawable/logout"
                android:contentDescription="@string/logout" />

            <TextView
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/exit"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/keyboard_arrow_right_small"
                android:contentDescription="@string/arrow" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>





