<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/image"
            android:layout_width="100pt"
            android:layout_height="100pt"
            android:src = "@drawable/onboarding_img_1"
            android:contentDescription="@string/onboarding_img"/>
        <TextView
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:paddingHorizontal="62dp"
            android:layout_marginTop="24pt"
            android:layout_marginBottom="12pt"
            android:textColor="@color/text_color"
            android:fontFamily="@font/roboto_regular"
            android:textSize="20sp"
        />
        <TextView
            android:id="@+id/description"
            android:paddingHorizontal="62.5dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/text_color"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            />

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50pt"
        android:layout_marginHorizontal="10pt"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/pass_btn"
            android:layout_width="55pt"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/btn_outline"
            android:paddingTop="2pt"
            android:paddingBottom="4pt"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_btn_text"
                android:textColor="@color/blue"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/next_btn"
            android:layout_width="55pt"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/btn_fill"
            android:paddingTop="2pt"
            android:paddingBottom="4pt"
            android:gravity="center">

            <TextView
                android:id="@+id/next_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_btn"
                android:textColor="@color/text_color"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

